--- a/css/banner.css
+++ b/css/banner.css
@@ -5,18 +5,16 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background: url(../img/futebol.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100vh;
-    background-position: center;
-
+    background:
+    url(../img/tite.png) bottom right / 30% 80vh no-repeat,
+    url(../img/bg.png) center / 100% 100vh no-repeat;
 }
 
 .banner-title {
     text-align: center;
     width: 100%;
     color: white;
-    position: absolute;
+    position: relative;
     top: 3rem;
     text-transform: uppercase;
     font-size: 5rem;
@@ -35,4 +33,15 @@
     -webkit-background-clip: text;
     color: transparent;
 
+}
+
+.banner-title::after {
+    content: '';
+    background: url(../img/trophy.png) center / 110% no-repeat;
+    width: 240px;
+    height: 190px;
+    position: absolute;
+    top: 7rem;
+    left: 50%;
+    transform: translateX(-50%);
 }
